maquetación de la estructura html del proyecto

--- a/Mokepon.html
+++ b/Mokepon.html
@@ -6,9 +6,42 @@
     </head>
     <body>
         <h1>MOKEPON 🔥🌱💧</h1>
-        <p>
-            <button>Fuego🔥</button>
-        </p>
+
+        <section id="Seleccionar_Mascota">
+            <h2>Elige tu mascota:</h2>
+
+            <label for="Hipodoge">Hipodoge</label>
+            <input type="radio" name="mascota" id="Hipodoge"/>
+
+            <label for="Capipepo">Capipepo</label>
+            <input type="radio" name="mascota" id="Capipepo"/>
+
+            <label for="Ratigueya">Ratigueya</label>
+            <input type="radio" name="mascota" id="Ratigueya"/>
+
+            <button>Seleccionar</button>
+        </section>
+
+        <section id="Seleccionar_Ataque">
+            <h2>Elige tu ataque:</h2>
+
+            <p>Tu mascota tiene <span>3</span> vidas</p>
+            <p>Las mascotas del enemigo tiene <span>3</span> vidas</p>
+            <p>
+                <button>Fuego🔥</button>
+                <button>Agua💧</button>
+                <button>tierra🌱</button>
+            </p>
+        </section>
+
+        <section id="Mensajes">
+            <p>Tu mascota atacó con Fuego🔥, la mascota del enemigo atacó con Agua💧 - GANASTE</p>
+        </section>
+
+        <section id="Reiniciar">
+            <button>Reiniciar</button>
+        </section>
+
         <script src="Mokepon.js"></script>
     </body>
 </HTML>
