Maquetacion con enlace js

--- a/Mokepon.html
+++ b/Mokepon.html
@@ -3,6 +3,7 @@
     <head>
         <meta charset="utf-8" />
         <title>Mokepon Platzi</title>
+        <script src="Mokepon.js"></script>
     </head>
     <body>
         <h1>MOKEPON 🔥🌱💧</h1>
@@ -19,7 +20,7 @@
             <label for="Ratigueya">Ratigueya</label>
             <input type="radio" name="mascota" id="Ratigueya"/>
 
-            <button>Seleccionar</button>
+            <button id="boton-mascota">Seleccionar</button>
         </section>
 
         <section id="Seleccionar_Ataque">
@@ -28,9 +29,9 @@
             <p>Tu mascota tiene <span>3</span> vidas</p>
             <p>Las mascotas del enemigo tiene <span>3</span> vidas</p>
             <p>
-                <button>Fuego🔥</button>
-                <button>Agua💧</button>
-                <button>tierra🌱</button>
+                <button id="boton-Fuego">Fuego🔥</button>
+                <button id="boton-Agua">Agua💧</button>
+                <button id="boton-Tierra">tierra🌱</button>
             </p>
         </section>
 
@@ -39,9 +40,9 @@
         </section>
 
         <section id="Reiniciar">
-            <button>Reiniciar</button>
+            <button id="boton-Reinicar">Reiniciar</button>
         </section>
 
-        <script src="Mokepon.js"></script>
+        
     </body>
 </HTML>
