--- a/Mokepon.html
+++ b/Mokepon.html
@@ -26,8 +26,9 @@
         <section id="Seleccionar_Ataque">
             <h2>Elige tu ataque:</h2>
 
-            <p>Tu mascota tiene <span>3</span> vidas</p>
-            <p>Las mascotas del enemigo tiene <span>3</span> vidas</p>
+            <p>Tu mascota <span id="mascota-jugador"> </span> tiene <span>3</span> vidas</p>
+            <p>La mascota <span id="mascota-enemigo"> </span> del enemigo tiene <span>3</span> vidas</p>
+
             <p>
                 <button id="boton-Fuego">Fuego🔥</button>
                 <button id="boton-Agua">Agua💧</button>
@@ -36,7 +37,7 @@
         </section>
 
         <section id="Mensajes">
-            <p>Tu mascota atacó con Fuego🔥, la mascota del enemigo atacó con Agua💧 - GANASTE</p>
+            
         </section>
 
         <section id="Reiniciar">
